--- a/d012/estilo/style.css
+++ b/d012/estilo/style.css
@@ -1,9 +1,7 @@
 @charset "UTF-8";
 
-
-
     *{
-        margin: 0px;
+        margin: 0%;
         padding: 0px;
     }
 
@@ -12,7 +10,7 @@
         background-color: darkgray;
     }
 
-    header {
+    header{
         background-color: black;
         color: white;
         text-align: center;
@@ -36,13 +34,13 @@
     header a:hover, footer a:hover {
         text-decoration: underline;
     }
+
     section {
-        padding: 10vh;
+        padding-top: 10vh;
         padding-bottom: 10vh;
         line-height: 2em;
         padding-left: 30px;
     }
-
 
     section.normal {
         background-color: white;
@@ -54,9 +52,9 @@
         color: white;
     }
 
-    section.image > p {
+    section.imagem > p {
+        background-color: rgba(0, 0, 0, 0.253);
         width: 400px;
-        background-color: rgb(0, 0, 0, 0.253);
     }
 
     footer {
